--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
@@ -114,9 +114,16 @@
               formControlName="password"
               [placeholder]="locale.field_force.text2"
             />
-            <mat-icon matSuffix (click)="showPassword = !showPassword">{{
-              showPassword ? "visibility" : "visibility_off"
-            }}</mat-icon>
+            <button
+              mat-icon-button
+              matSuffix
+              [disableRipple]="true"
+              (click)="showPassword = !showPassword"
+            >
+              <mat-icon>{{
+                showPassword ? "visibility" : "visibility_off"
+              }}</mat-icon>
+            </button>
             <mat-error
               *ngIf="
                 formUser.get('password').hasError('required') &&
@@ -142,13 +149,16 @@
               formControlName="password_confirmation"
               [placeholder]="locale.field_force.text3"
             />
-            <mat-icon
+            <button
+              mat-icon-button
               matSuffix
+              [disableRipple]="true"
               (click)="showConfirmPassword = !showConfirmPassword"
-              >{{
-                showConfirmPassword ? "visibility" : "visibility_off"
-              }}</mat-icon
             >
+              <mat-icon>{{
+                showConfirmPassword ? "visibility" : "visibility_off"
+              }}</mat-icon>
+            </button>
             <mat-error
               *ngIf="
                 formUser.get('password_confirmation').hasError('required') &&
