translation-sprint-04-2022-merge-master: - missing closing tag

--- a/src/app/pages/dte/template/dialog/background-misi/background-misi.component.html
+++ b/src/app/pages/dte/template/dialog/background-misi/background-misi.component.html
@@ -159,7 +159,7 @@
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon id="icon-upload-image" class="secondary-text s-48">add_photo_alternate_outline</mat-icon>
         <br>
-        <span matPrefix [innerHTML]="('iklan_dalam_aplikasi.spanduk_online.drag_image' | translate)">
+        <span matPrefix [innerHTML]="('iklan_dalam_aplikasi.spanduk_online.drag_image' | translate)"></span>
         <span matPrefix>{{'dte.template_tugas.text38' | translate}}</span>
       </div>
     </div>
