[update]:: try fix error not saved

--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
@@ -36,7 +36,7 @@
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" class="pb-24 px-24" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="20%" class="is-light form-primary">
-              <input matInput [matDatepicker]="dari" (focus)="dari.open()" formControlName="from" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text17' | translate}}"
+              <input matInput [matDatepicker]="dari" (focus)="dari.open()" formControlName="from" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.available_from' | translate}}"
                 (dateChange)="setMinDate()">
               <mat-error
                 *ngIf="formBannerGroup.controls['from'].hasError('required') && formBannerGroup.controls['from'].touched">
@@ -48,7 +48,7 @@
               <mat-datepicker #dari></mat-datepicker>
             </mat-form-field>
             <mat-form-field fxFlex="20%" class="is-light form-primary">
-              <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" formControlName="to" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text18' | translate}}"
+              <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" formControlName="to" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.available_to' | translate}}"
                 [min]="minDate">
               <mat-error
                 *ngIf="formBannerGroup.controls['to'].hasError('required') && formBannerGroup.controls['to'].touched">
