--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -39,7 +39,7 @@
           <div fxLayout="row" fxLayout.lt-md="column" class="pb-24 px-24" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="20%" class="is-light form-primary">
               <input matInput [matDatepicker]="dari" (focus)="dari.open()" formControlName="from"
-                placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text17' | translate}}" (dateChange)="setMinDate()">
+                placeholder="{{'iklan_dalam_aplikasi.spanduk_online.available_from' | translate}}" (dateChange)="setMinDate()">
               <mat-error
                 *ngIf="formBannerGroup.controls['from'].hasError('required') && formBannerGroup.controls['from'].touched">
                 {{'iklan_dalam_aplikasi.spanduk_online.available_from' | translate}} {{'global.messages.mandatory_text'
@@ -52,7 +52,7 @@
             </mat-form-field>
             <mat-form-field fxFlex="20%" class="is-light form-primary">
               <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" formControlName="to"
-                placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text17' | translate}}" [min]="minDate">
+                placeholder="{{'iklan_dalam_aplikasi.spanduk_online.available_to' | translate}}" [min]="minDate">
               <mat-error
                 *ngIf="formBannerGroup.controls['to'].hasError('required') && formBannerGroup.controls['to'].touched">
                 {{'iklan_dalam_aplikasi.spanduk_online.available_to' | translate}} {{'global.messages.mandatory_text' |
