translation-sprint-04-2022-merge-master: - missing closing tag

--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -675,7 +675,7 @@
                     {{row.owner ? row.owner : '-'}}
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column name="{{'global.label.type' | translate}" prop="type">
+                <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="type">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                     {{row.type.toUpperCase()}}
                   </ng-template>
