--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
     <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
       <div class="lgn-box">
         <div class="top">
-          <img [src]="environment?.image" [srcset]="environment?.image_2x" />
+          <img [src]="branding?.image" [srcset]="branding?.image_2x" />
           <div class="title">{{ ls.locale.login.text1 }}</div>
         </div>
         <div class="middle-form">
