--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -67,7 +67,7 @@
               </mat-form-field>
               <div fxFlex="10"></div>
               <div fxLayout="row" fxFlex="25"
-                *ngIf="formNotification.controls['user_group'].value !== 'tsm' && formNotification.controls['content_type'].value !== 'spesific_product_b2b'">
+                *ngIf="formNotification.controls['user_group'].value !== 'tsm'">
                 <mat-form-field fxFlex="50" class="is-light form-primary">
                   <input matInput [matDatepicker]="tanggal_terbit" (focus)="tanggal_terbit.open()"
                     formControlName="date" placeholder="Tanggal Terbit">
@@ -97,7 +97,7 @@
 
           <!-- spesifik produk b2b -->
           <div fxLayout="row" *ngIf=" formNotification.controls['user_group'].value === 'retailer' && formNotification.get('content_type').value === 'spesific_product_b2b'">
-              <search-product-barcode [errorMessage]="'Tidak ada produk ditemukan'" [inputPlaceHolder]="'Search Barcode'" fxFlex="45" [value]="formNotification.controls['barcode'].value" (onChange)="handleSearchProduct($event)" [disabled]="this.actionType === 'detail'">
+              <search-product-barcode [errorMessage]="'Tidak ada produk ditemukan'" [inputPlaceHolder]="'Search Product'" fxFlex="45" [value]="formNotification.controls['barcode'].value" (onChange)="handleSearchProduct($event)" [disabled]="this.actionType === 'detail'">
                 <mat-error
                 *ngIf="formNotification.controls['barcode'].hasError('required') && formNotification.controls['barcode'].touched">
                 <!-- {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
