[update]:: fix not 100%

--- a/src/app/pages/pay-later/pay-later-panel/pay-later-panel-import-dialog/pay-later-panel-import-dialog.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/pay-later-panel-import-dialog/pay-later-panel-import-dialog.component.html
@@ -45,6 +45,7 @@
             <th nowrap>Area</th>
             <th nowrap>Valid</th>
             <th nowrap>{{ls.locale.global.messages.invalid_reason}}</th>
+            <th nowrap>Whitelist</th>
           </tr>
         </thead>
         <tbody>
@@ -75,6 +76,9 @@
             </td>
             <td nowrap>
               {{ !item.valid ? item.message : '-' }}
+            </td>
+            <td nowrap>
+              {{ (item.whitelist) ? 'Ya' : 'Tidak' }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
