Ticker changes for the principal

--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -377,12 +377,18 @@
             *ngIf="(formBannerGroup.get('content_type').value === 'static_page' || formBannerGroup.get('content_type').value === 'e_wallet')">
             <div fxLayout="row" *ngIf="formBannerGroup.get('content_type').value === 'static_page'">
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input matInput type="text" formControlName="title"
+                <input  *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="10" matInput type="text" formControlName="title"
                   placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">
+                <input  *ngIf="formBannerGroup.get('type_banner').value != 'ticker'" matInput type="text" formControlName="title"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">  
                 <mat-error
                   *ngIf="formBannerGroup.controls['title'].hasError('required') && formBannerGroup.controls['title'].touched">
                   {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} {{'global.messages.mandatory_text' |
                   translate}}
+                </mat-error>
+                <mat-error
+                  *ngIf="formBannerGroup.controls['title'].hasError('maxlength') && formBannerGroup.controls['title'].touched">
+                  {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} Maksimal 10 karakter
                 </mat-error>
               </mat-form-field>
             </div>
@@ -423,12 +429,17 @@
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">{{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}}</h3>
             </div>
-            <textarea [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+            <textarea *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="20" [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+            <textarea *ngIf="formBannerGroup.get('type_banner').value != 'ticker'" [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
             <mat-error style="padding-top: 6px !important; font-size: .86em;"
               *ngIf="formBannerGroup.controls['body'].hasError('required') && formBannerGroup.controls['body'].touched">
               {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
               translate}}
             </mat-error>
+            <mat-error
+                  *ngIf="formBannerGroup.controls['body'].hasError('maxlength') && formBannerGroup.controls['body'].touched">
+                  {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} Maksimal 20 karakter
+                </mat-error>
           </div>
 
           <!-- Landing Page -->
@@ -502,7 +513,8 @@
 
           <!-- Retailer -->
           <div *ngIf="formBannerGroup.get('user_group').value === 'retailer'">
-            <div class="pb-16 px-24">
+            <div  fxLayout="row" >
+              <div class="pb-16 px-24">
               <div class="" fxLayout="row" fxLayoutAlign="start center">
                 <strong class="font-size-16">{{'iklan_dalam_aplikasi.spanduk_online.text16' | translate}}</strong>
               </div>
@@ -511,6 +523,17 @@
                   {{item.name}}
                 </mat-radio-button>
               </mat-radio-group>
+              </div>
+              <div *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" class="pb-16 px-24">
+                <div class="" fxLayout="row" fxLayoutAlign="start center">
+                  <strong class="font-size-16">{{ls.locale.global.label.category}}</strong>
+                </div>
+                <mat-radio-group formControlName="kategori" class="radio-group">
+                  <mat-radio-button class="radio-button" *ngFor="let item of listKategori" [value]="item.value">
+                    {{item.name}}
+                  </mat-radio-button>
+                </mat-radio-group>
+                </div>
             </div>
 
             <div class="pb-16 px-24" *ngIf="formBannerGroup.get('user_group').value === 'retailer'">
